--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,17 +3,17 @@ name: Release
 on: workflow_dispatch
 
 env:
-  FPM_OPTS: "-s dir --prefix '/usr' -n kvrocks --verbose -a native \
+  FPM_OPTS: -s dir --prefix '/usr' -n kvrocks --verbose -a native \
           --config-files /usr/share/kvrocks/kvrocks.conf \
           --description 'A distributed key value NoSQL database that uses RocksDB as storage engine and is compatible with Redis protocol' \
-          --url 'https://kvrocks.apache.org' --license 'Apache-2.0'"
+          --url 'https://kvrocks.apache.org' --license 'Apache-2.0'
 
 jobs:
   release-packages:
     name: Release DEB Package
     runs-on: ubuntu-20.04
     steps:
-        uses: actions/checkout@v4.0.0
+      - uses: actions/checkout@v4.0.0
         with:
           fetch-depth: 64
 
