--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,11 @@ name: Release
 on: workflow_dispatch
 
 env:
-  FPM_OPTS: -s dir --prefix '/usr' -n kvrocks --verbose -a native \
-          --config-files /usr/share/kvrocks/kvrocks.conf \
-          --description 'A distributed key value NoSQL database that uses RocksDB as storage engine and is compatible with Redis protocol' \
-          --url 'https://kvrocks.apache.org' --license 'Apache-2.0'
+  FPM_OPTS: >-
+    -s dir --prefix '/usr' -n kvrocks --verbose -a native 
+    --config-files /usr/share/kvrocks/kvrocks.conf 
+    --description 'A distributed key value NoSQL database that uses RocksDB as storage engine and is compatible with Redis protocol' 
+    --url 'https://kvrocks.apache.org' --license 'Apache-2.0'
 
 jobs:
   release-packages:
@@ -28,7 +29,7 @@ jobs:
 
       - name: Build
         run: |
-          git clone -b v{{ env.VERSION }} https://github.com/apache/kvrocks
+          git clone -b v$VERSION https://github.com/apache/kvrocks
           cd kvrocks
           ./x.py build -DPORTABLE=1 -DCMAKE_BUILD_TYPE=Release -j $(nproc)
       
