--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,8 +47,8 @@ jobs:
       - name: Package Deb
         uses: bpicode/github-action-fpm@v0.9.2
         with:
-          fpm_args: './release'
-          fpm_opts: '-t deb -v ${{ env.VERSION }} --iteration ${{ env.ITERATION }} ${{ env.FPM_OPTS }}'
+          fpm_args: '.'
+          fpm_opts: '-t deb -v ${{ env.VERSION }} --iteration ${{ env.ITERATION }} -C release ${{ env.FPM_OPTS }}'
 
       - name: Release
         uses: softprops/action-gh-release@v1
